--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-
+/server/.env
 # testing
 /coverage
 
@@ -12,7 +12,7 @@
 /build
 
 # misc
-.env
+
 .DS_Store
 .env.local
 .env.development.local
